pack: auto-generate name and description from active sources

--- a/web/index.html
+++ b/web/index.html
@@ -1152,7 +1152,20 @@ function showCreatePackModal() {
     </div>
   </div>`;
   document.body.appendChild(modal);
-  document.getElementById('pack_name').focus();
+  // Auto-generate name & description from sources
+  fetch(`${API}/sources`, { credentials: 'same-origin' }).then(r => r.json()).then(sources => {
+    const active = sources.filter(s => s.is_active);
+    if (!active.length) return;
+    const types = [...new Set(active.map(s => s.type))];
+    const typeLabels = { twitter_feed: 'Twitter', twitter_list: 'Twitter Lists', rss: 'RSS', website: 'Web', hackernews: 'Hacker News', reddit: 'Reddit', github_trending: 'GitHub', custom_api: 'API', digest_feed: 'Digest Feeds' };
+    const labels = types.map(t => typeLabels[t] || t);
+    const nameEl = document.getElementById('pack_name');
+    const descEl = document.getElementById('pack_desc');
+    if (nameEl && !nameEl._edited) nameEl.value = `${currentUser?.name || 'My'}'s ${labels.slice(0,2).join(' + ')} Pack`;
+    if (descEl && !descEl._edited) descEl.value = `${active.length} curated sources: ${active.map(s => s.name).join(', ')}`;
+  }).catch(() => {});
+  document.getElementById('pack_name').oninput = function() { this._edited = true; };
+  document.getElementById('pack_desc').oninput = function() { this._edited = true; };
 }
 
 async function doCreatePack(btn) {
