sources: visible to everyone, non-logged-in see public sources as read-only

--- a/web/index.html
+++ b/web/index.html
@@ -387,7 +387,7 @@ function ghLangHtml() {
 function renderAuthBar() {
   const bar = document.getElementById('authBar');
   const ghSvg = `<svg height="16" width="16" viewBox="0 0 16 16" fill="currentColor"><path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"/></svg>`;
-  const sourcesBtn = currentUser ? `<span onclick="currentType='sources';document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));currentOffset=0;allLoaded=false;renderSources();location.hash='sources'" style="cursor:pointer;font-size:16px;line-height:0;padding:2px;color:#666;transition:color .2s;" onmouseover="this.style.color='#ccc'" onmouseout="this.style.color='#666'" title="${t('tabSources')}">📡</span>` : '';
+  const sourcesBtn = `<span onclick="currentType='sources';document.querySelectorAll('.tab').forEach(t=>t.classList.remove('active'));currentOffset=0;allLoaded=false;renderSources();location.hash='sources'" style="cursor:pointer;font-size:16px;line-height:0;padding:2px;color:#666;transition:color .2s;" onmouseover="this.style.color='#ccc'" onmouseout="this.style.color='#666'" title="${t('tabSources')}">📡</span>`;
   const moreMenu = `<div class="user-menu" onclick="document.getElementById('moreDropdown').classList.toggle('show')">
     <span style="cursor:pointer;font-size:14px;color:#666;transition:color .2s;padding:2px 4px;" onmouseover="this.style.color='#ccc'" onmouseout="this.style.color='#666'">⋯</span>
     <div id="moreDropdown" class="user-dropdown">
@@ -406,7 +406,7 @@ function renderAuthBar() {
         </div>
       </div>`;
   } else {
-    bar.innerHTML = ghLangHtml() + moreMenu
+    bar.innerHTML = ghLangHtml() + sourcesBtn + moreMenu
       + (authEnabled ? `<a class="auth-btn" href="${API}/auth/google?origin=${encodeURIComponent(location.origin)}">${t('signIn')}</a>` : '');
   }
   const lt = document.getElementById('langToggle');
@@ -781,10 +781,17 @@ async function renderSources() {
     const active = sources.filter(s => s.is_active);
     const types = [...new Set(sources.map(s => s.type))];
 
-    // ── Section 1: My Sources header with count + add ──
+    // ── Section 1: Sources header ──
+    const headerTitle = isLoggedIn
+      ? `📡 ${lang==='zh'?'我的信息源':'My Sources'} <span style="font-size:13px;color:#666;font-weight:400;">${active.length}/${sources.length} ${lang==='zh'?'活跃':'active'}</span>`
+      : `📡 ${lang==='zh'?'信息源':'Sources'} <span style="font-size:13px;color:#666;font-weight:400;">${sources.length} ${lang==='zh'?'个公开源':'public sources'}</span>`;
     let html = `<div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:12px;">
-      <h2 style="margin:0;font-size:16px;color:#e0e0e0;">📡 ${lang==='zh'?'我的信息源':'My Sources'} <span style="font-size:13px;color:#666;font-weight:400;">${active.length}/${sources.length} ${lang==='zh'?'活跃':'active'}</span></h2>
+      <h2 style="margin:0;font-size:16px;color:#e0e0e0;">${headerTitle}</h2>
     </div>`;
+
+    if (!isLoggedIn && sources.length) {
+      html += `<div style="font-size:12px;color:#555;margin-bottom:16px;">${lang==='zh'?'以下是为本站 Digest 提供内容的信息源':'These are the sources powering this digest'}</div>`;
+    }
 
     // ── Add source (inline, compact) ──
     if (isLoggedIn) {
