show version v0.5.0 in subtitle

--- a/web/index.html
+++ b/web/index.html
@@ -179,7 +179,7 @@ window.onerror = function(msg, src, line) {
 const I18N = {
   zh: {
     title: '☀️ AI Digest Dashboard',
-    subtitle: 'AI 新闻简报 — powered by Lisa',
+    subtitle: 'AI 新闻简报 — powered by Lisa · v0.5.0',
     tab4h: '4H 简报', tabDaily: '日报', tabWeekly: '周报', tabMonthly: '月报', tabMarks: '📌 Mark 收藏',
     loginBanner: '💡 登录 Google 账号即可收藏文章、管理个人书签',
     loginBtn: '登录', logout: '退出', signIn: '登录',
@@ -231,7 +231,7 @@ const I18N = {
   },
   en: {
     title: '☀️ AI Digest Dashboard',
-    subtitle: 'AI news digest — powered by Lisa',
+    subtitle: 'AI news digest — powered by Lisa · v0.5.0',
     tab4h: '4H Briefs', tabDaily: 'Daily', tabWeekly: 'Weekly', tabMonthly: 'Monthly', tabMarks: '📌 Marks',
     loginBanner: '💡 Sign in with Google to bookmark articles and manage your reading list',
     loginBtn: 'Login', logout: 'Logout', signIn: 'Sign in',
